--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "popper.js": "^1.12",
     "vue": "^2.5.7",
     "vue-router": "^3.0.1",
-    "laravel-mix": "^2.0"
+    "laravel-mix": "^2.0",
+    "moment": "^2.10.6",
+    "moment-timezone": "^0.5.21"
   }
 }
